fixing memory leaks